set Dockerfile