@@ -1,23 +1,4 @@
-#
-# Build
-#
-FROM maven:3.8.4-jdk-11-slim as buildtime
-WORKDIR /build
-COPY . .
-RUN mvn clean package
-
-
-FROM adoptopenjdk/openjdk11:alpine-jre as builder
-COPY --from=buildtime /build/target/*.jar application.jar
-RUN java -Djarmode=layertools -jar application.jar extract
-
-
-FROM ghcr.io/pagopa/docker-base-springboot-openjdk11:v1.0.1@sha256:bbbe948e91efa0a3e66d8f308047ec255f64898e7f9250bdb63985efd3a95dbf
-COPY --chown=spring:spring  --from=builder dependencies/ ./
-COPY --chown=spring:spring  --from=builder snapshot-dependencies/ ./
-# https://github.com/moby/moby/issues/37965#issuecomment-426853382
-RUN true
-COPY --chown=spring:spring  --from=builder spring-boot-loader/ ./
-COPY --chown=spring:spring  --from=builder application/ ./
-
+FROM adoptopenjdk/openjdk11-openj9:jdk-11.0.1.13-alpine-slim
+COPY target/ReportingOrgsEnrollment-0.0.1.jar app.jar
 EXPOSE 8080
+CMD java -XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap -Dcom.sun.management.jmxremote -noverify ${JAVA_OPTS} -jar app.jar
